// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditStoreReportAttributeRow/> renders blank option label when option id is not selected 1`] = `
<tr>
  <td
    className="text-right"
  >
    Label 1
    :
  </td>
  <td>
    
     (
    <a
      onClick={[Function]}
      style={Object {}}
    >
      change
    </a>
    )
  </td>
</tr>
`;

exports[`<AuditStoreReportAttributeRow/> renders the selected option label correctly 1`] = `
<tr>
  <td
    className="text-right"
  >
    Label 1
    :
  </td>
  <td>
    Option Label 1
     (
    <a
      onClick={[Function]}
      style={Object {}}
    >
      change
    </a>
    )
  </td>
</tr>
`;
